--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Mario Jump Game - JS</title>
 
     <link rel="stylesheet" href="./Assets/CSS/style.css" />
-    <script src="./Assets/JS/script.js"></script>
   </head>
   <body>
     <div class="game-board">
+      <img src="./Assets/img/clouds.png" class="clouds">
       <img src="./Assets/img/pipe.png" class="pipe" />
       <img src="./Assets/img/mario.gif" class="mario" />
     </div>
   </body>
+  <script src="./Assets/JS/script.js"></script>
 </html>
